[gd_scene load_steps=10 format=3 uid="uid://c52cila0v85er"]

[ext_resource type="Script" uid="uid://dofm84mvaoh4k" path="res://scripts/ui.gd" id="1_ixefy"]
[ext_resource type="Texture2D" uid="uid://bl76h3xudi18v" path="res://assets/art/progress_bar_base_under.png" id="2_emnxj"]
[ext_resource type="Texture2D" uid="uid://b0r5hfbn86a6p" path="res://assets/art/progress_bar_base_over.png" id="3_tfkpt"]
[ext_resource type="Texture2D" uid="uid://b62il6uk58to3" path="res://assets/art/progress_bar_base.png" id="4_gn027"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_75u2n"]
particle_flag_disable_z = true
inherit_velocity_ratio = 0.289
spread = 127.41
initial_velocity_min = 30.0
initial_velocity_max = 30.0
gravity = Vector3(0, 98, 0)
scale_min = 3.0
scale_max = 6.0
color = Color(0.180005, 0.180005, 0.180005, 1)

[sub_resource type="Animation" id="Animation_75u2n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(269, 608)]
}

[sub_resource type="Animation" id="Animation_3wlde"]
resource_name = "shaking"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.0666667, 0.1, 0.133333, 0.165146, 0.166667, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(268, 607), Vector2(270, 609), Vector2(269, 601), Vector2(273, 609), Vector2(282, 602), Vector2(277, 594), Vector2(282, 602), Vector2(296, 605)]
}

[sub_resource type="Animation" id="Animation_ua6yw"]
resource_name = "still"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(269, 608)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xpksx"]
_data = {
&"RESET": SubResource("Animation_75u2n"),
&"shaking": SubResource("Animation_3wlde"),
&"still": SubResource("Animation_ua6yw")
}

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ixefy")

[node name="overscreen" type="ColorRect" parent="."]
offset_left = -37.0
offset_top = -16.0
offset_right = 1179.0
offset_bottom = 671.0
color = Color(0, 0, 0, 1)

[node name="hp" type="TextureProgressBar" parent="."]
offset_left = 269.0
offset_top = 608.0
offset_right = 909.0
offset_bottom = 640.0
max_value = 500.0
value = 500.0
rounded = true
texture_under = ExtResource("2_emnxj")
texture_over = ExtResource("3_tfkpt")
texture_progress = ExtResource("4_gn027")

[node name="node_end" type="GPUParticles2D" parent="hp"]
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_75u2n")

[node name="node_end2" type="GPUParticles2D" parent="hp"]
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_75u2n")

[node name="node_end3" type="GPUParticles2D" parent="hp"]
emitting = false
amount = 12
process_material = SubResource("ParticleProcessMaterial_75u2n")

[node name="hp_anim" type="AnimationPlayer" parent="hp"]
libraries = {
&"": SubResource("AnimationLibrary_xpksx")
}
